# Hub-Cowork

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: ui-architecture.md
scripts/: autostart.ps1  build.ps1  restart.ps1  start.ps1  stop.ps1
src/hub_cowork/: __init__.py  __main__.py
src/hub_cowork/assets/: .env.defaults  chat_ui.css  chat_ui.html  chat_ui.js  hub_config.default.json
src/hub_cowork/core/: agent_core.py  app_paths.py  auth_credential.py  computer_use.py  conversation_thread.py  hub_config.py  outlook_helper.py  service_status.py  thread_executor.py  thread_manager.py  thread_store.py
src/hub_cowork/host/: console.py  desktop_host.py  meeting_agent.py  redis_bridge.py  tray_icon.py  ui_actions.py
src/hub_cowork/skills/: agenda_repurpose.yaml  qa.yaml  task_status.yaml
src/hub_cowork/skills/hub_agenda_creation/: engagement_agenda_publish.yaml  engagement_briefing.yaml
src/hub_cowork/skills/hub_agenda_creation/tools/: engagement_context.py
src/hub_cowork/skills/meeting_invites/: meeting_invites.yaml
src/hub_cowork/skills/meeting_invites/tools/: create_meeting_invites.py
src/hub_cowork/skills/rfp_evaluation/: rfp_evaluation.yaml
src/hub_cowork/skills/rfp_evaluation/tools/: create_calendar_reminder.py  create_rfp_brief_doc.py  query_fabric_agent.py  search_foundryiq.py  share_onedrive_document.py
src/hub_cowork/skills/shelf_watch/: shelf_watch.yaml
src/hub_cowork/tools/: _tool_result.py  create_word_doc.py  get_hub_config.py  get_task_status.py  query_workiq.py  resolve_speakers.py  send_email.py
(+3 files in other folders)
